--- a/index.html
+++ b/index.html
@@ -28,28 +28,28 @@
 					<div id="main">
 						<article class="thumb">
 							<a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/01.jpg" alt="" /></a>
-						 <!--	<h2>ΕΥΧΑΡΙΣΤΩ ΠΟΛΥ ΡΟΖΑΝΑ!</h2>-->
+							<h2>Emma</h2>
 							<p>Thank you for everything! </p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt="" /></a>
-						 <!--	<h2>Cafe Batavia, Jakarta - Indonesia, 2015.</h2>-->
-						 <!--	<p>Terima kasih untuk semuanya!</p>-->
+							<h2>Emma</h2>
+							<p>Thank you for everything! </p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt="" /></a>
-						 <!--		<h2>Take a good look at me now, 'cause I'll be standing here..</h2> -->
-						    		<p>Thank you for everything! </p>
+							<h2>Emma</h2>
+							<p>Thank you for everything! </p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt="" /></a>
-						 <!--		<h2>Meeting in the room was so mainstream, let's have a meeting in the park!</h2>-->
+							<h2>Emma</h2>
 							<p>Thank you for everything! </p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt="" /></a>
-						 <!--		<h2>Indonesia Planning Meetup - October 2015</h2>-->
-						 <!--		<p>Terima kasih untuk semuanya! </p>-->
+							<h2>Emma</h2>
+							<p>Thank you for everything! </p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt="" /></a>
