--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 							<h2>Emma</h2>
 							<p>Thank you for everything! </p>
 						</article>
-						<article class="thumb">
+						<!--<article class="thumb">
 							<a href="images/fulls/45.jpg" class="image"><img src="images/thumbs/45.jpg" alt="" /></a>
 							<h2>Emma</h2>
 							<p>Thank you for everything! </p>
@@ -370,12 +370,7 @@
 							<a href="images/fulls/69.jpg" class="image"><img src="images/thumbs/69.jpg" alt="" /></a>
 							<h2>Emma</h2>
 							<p>Thank you for everything! </p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/70.jpg" class="image"><img src="images/thumbs/70.jpg" alt="" /></a>
-							<h2>Emma</h2>
-							<p>Thank you for everything! </p>
-						</article>
+						</article>-->
 					</div>
 			</div>
 
